# giarri_encrypt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.encrypted  README.md
.github/workflows/: ci.yml
coverage-to-share/: index.crypto.cpp.8c57ca8ea136d0bb8c846c77ae5b9e78.html  index.crypto.hpp.b94b1c14a550225de42ae300ee86d3c8.html  index.functions.html  index.html  index.js
include/: crypto.hpp  logging.hpp
src/: CMakeLists.txt  crypto.cpp  main.cpp
src/include/: logging.hpp
tests/: CMakeLists.txt  test_crypto.cpp
